########################################################### -*- Makefile -*- ##
## $Id: Makefile.am 527 2005-04-01 21:28:33Z mdeters $
###############################################################################

SUBDIRS = diff

EXTRA_DIST = \
	AddressHolder.java \
	gc_config_macros.h \
	jRate-gc.cc \
	jRate-gc.h \
	make-patches.sh \
	memory-areas.h \
	natIdentityHashMap.cc \
	natThread.h \
	natVector.cc \
	rtjavaprims.h

